[project]
name = "nba-passing-networks"
version = "0.1.0"
description = "NBA team offense analyzed as weighted passing networks"
authors = [
    { name = "Aarit Dua" },
    { name = "Vedant Kansara" },
    { name = "Lucas Hui" }
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dash>=4.1.0",
    "nba_api>=1.11.4",
    "networkx>=3.6.1",
    "numpy>=2.4.2",
    "pandas>=3.0.1",
    "plotly>=6.6.0",
    "requests>=2.32.5",
]

[project.scripts]
nba-passing-networks = "main:main"

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]